# rlcd

./: .gitignore  LICENSE  README.md  environment.yml  environment_dev.yml  pyproject.toml
src/: actions.py  config.py  gen_data.py  main.py  scoring.py  search.py  timing.py
src/rlcd/: actions.py  config.py  gen_data.py  model.py  plotting.py  replay.py  scoring.py  search.py  utils.py
testing/: conftest.py  test_filter_illegal_actions.py  test_mle_w.py  test_search.py
