[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r"
version = "0.1.0"
description = "Reinforcement learning based causal discovery"
authors = [{name = "Victor Kaplan Kjellerup"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
